fix(checkbox): fix checkbox alignment

--- a/src/checkbox/checkbox.css
+++ b/src/checkbox/checkbox.css
@@ -11,7 +11,6 @@
 
 .checkbox {
     display: inline-flex;
-    align-items: center;
     cursor: pointer;
     user-select: none;
     font-family: var(--font);
